frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
/*@import 'normalize.css';*/

/*@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap");*/

@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";

@import "react-date-range/dist/styles.css";
@import "react-date-range/dist/theme/default.css";

@import "./components/loader.scss";

@import "./components/body.scss";
@import "./components/navbar.scss";
@import "./components/card.scss";
@import "./components/buttons.scss";
@import "./components/radiobtn.scss";
@import "./components/selectdropdown.scss";
@import "./components/textfields.scss";
@import "./components/bannercomponents.scss";
@import "./components/datewrap.scss";
@import "./components/datatable.scss";
@import "./components/checkpoint.scss";
@import "./components/checkbox.scss";
@import "./components/inputotp.scss";
@import "./components/map.scss";
@import "./pages/employee/tooltip.scss";
@import "./components/menu.scss";
@import "./components/submiterrors.scss";
@import "./components/ratingstar.scss";
@import "./components/keynote.scss";
@import "./components/statushighlight.scss";
@import "./components/imageviewer.scss";
@import "./components/actionbar.scss";
@import "./components/table.scss";
@import "./components/popup.scss";
@import "./components/uploadcomponents.scss";
@import "./components/toast.scss";
@import "./components/detailscontainer.scss";
@import "./components/telephone.scss";
@import "./components/grey.scss";
@import "./components/actionLink.scss";
@import "./components/sectionalDropdown.scss";
@import "./components/detailscard.scss";
@import "./components/searchAction.scss";
@import "./components/tag.scss";
@import "./components/topbar.scss";
@import "./components/languageSelector.scss";
@import "./components/custombtn.scss";
@import "./components/citizenInfoLabel.scss";
@import "./components/roundedLabel.scss";
@import "./components/changeLanguage.scss";
@import "./components//metricsTable.scss";
@import "./components/filters.scss";
@import "./components//charts.scss";
@import "./components/summary.scss";
@import "./components/multiLink.scss";
@import "./components/info-banner.scss";
@import "./components/multiSelectDropdown.scss";
@import "./components/EllipsisMenu.scss";
@import "./components/CitizenHomeCard.scss";
@import "./components/PropertySearchForm.scss";
@import "./components/SearchForm.scss";
@import "./components/cardHeaderWithOptions.scss";
@import "./components/TimeLine.scss";
@import "./components/PageBasedInput.scss";
@import "./components/StandaloneSearchBar.scss";
@import "./components/CardBasedOptions.scss";
@import "./components/WhatsNewCard.scss";
@import "./components/SearchOnRadioButton.scss";
@import "./components/EventCalendarView.scss";
@import "./components/OnGroundEventCard.scss";
@import "./components/PopupHeadingLabel.scss";
@import "./components/hoc/index.scss";

@import "./pages/employee/index.scss";
@import "./pages/employee/cardfix.scss";
@import "./pages/employee/popupmodule.scss";
@import "./pages/employee/container.scss";
@import "./pages/employee/inbox.scss";
@import "./pages/employee/response.scss";
@import "./pages/employee/form-fields.scss";
@import "./pages/employee/scroll-table.scss";
@import "./pages/employee/EmployeeLogin.scss";
@import "./pages/employee/updateNumber.scss";

@import "./pages/citizen/payment/payment-type.scss";
@import "./pages/citizen/container.scss";
@import "./pages/citizen/HomePageWrapper.scss";
@import "./pages/citizen/CitizenEngagementNotificationWrapper.scss";
@import "./pages/citizen/Events.scss";
@import "./pages/citizen/DocumentList.scss";
@import "./pages/citizen/SurveyList.scss";
@import "./pages/citizen/updatePropertyNumber.scss";
@import "./pages/citizen/citizenDocument.scss";
@import "./pages/employee/surveys.scss";

.display-none{
  display: none;
}

.p-unset{
  padding: unset !important;
}

.flex-one{
  @apply flex-1;
}

.display-flex-gap-2{
  @apply flex gap-3;
}
.rm-mb {
  margin-bottom: unset !important;
}

.w-fullwidth{
  @apply w-full;
}

.margin-unset{
  margin: unset !important;
}

.text-align-center{
  @apply text-center;
}

.desktop-only{
  @apply hidden;
}

@screen dt {
  .desktop-only{
    @apply block;
  } 
}

.mobile-only{
  @apply block;
}

@screen dt {
  .mobile-only{
    @apply hidden;
  } 
}

.dark {
  @apply text-text-primary;
}

.mrlg{
  @apply mr-lg
}

.mrsm{
  @apply mr-sm
}

.home-link {
  margin-left: 16px;
  margin-bottom: 16px;

  a {
    color: #1d70b8;
  }
}

.clear-search-label {
  color: #f47738;
  cursor: pointer;
}

.search-submit-bar {
  margin-top: 32;
  margin-left: auto;
}

.application-details-link-button {
  @apply flex justify-between items-center;

  .download-button {
    color: #f47738;
    margin-left: 8px;
  }
}

.response-download-button {
  @apply flex mb-sm;

  .download-button {
    color: #f47738;
    margin-left: 8px;
  }
}

.check-page-link-button {
  color: #f47738 !important;
}

.pt-application-download-btn {
  display: flex;
  justify-content: flex-end;
  margin: 0px 8px;
}

.form-pt-dropdown-only {
  .options-card {
    position: unset;
  }
}
.application-table-container {
  @apply mt-lg ml-lg flex-1;
}

.primary-label-btn {
  @apply flex;
  gap: 10px;

  svg {
    fill: #f47738;
  }

  color: #f47738;

  cursor: pointer;
  font-weight: 500;
  width: fit-content;
}

.primaryColor {
  color: #0B0C0C !important;
}

@media (hover: hover) {
  .primary-label-btn {
    &:hover {
      color: #000;

      svg {
        fill: #000;
      }
    }
  }
}

.disabled {
  @apply border-grey-dark text-grey-dark !important;
  pointer-events: none !important;
}

.card-date-input {
  @apply absolute top-0 left-0 w-3/4 bg-white pl-sm border border-input-border border-solid border-r-0;
  outline: transparent solid 1px;
  height: 2.5rem;
}

.h4 {
  @apply mb-sm;
}

.react-time-picker {
  width: 194px;
  height: 2.5rem;
  &__wrapper {
    border: 2px solid #0b0c0c;
    padding-left: 16px;
  }
  &__inputGroup__input {
    @apply px-sm;
    line-height: 2.5rem;
    min-width: 16px;
    &:focus {
      outline: 2px solid black;
    }
  }
}

.border-none {
  border: none;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type="number"] {
  -moz-appearance: textfield;
}

.static {
  @apply flex flex-col;
  min-height: 85vh;

  &-wrapper {
    flex: 1;
    max-height: 75vh;
    overflow: scroll;
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    &::-webkit-scrollbar {
      display: none;
    }
  }
}

.bill-summary {
  border: #e8e7e6 solid 1px;
  @apply bg-grey-light w-full;

  .bill-account-details {
    @apply flex mb-md;
    padding: 5px;

    .label {
      @apply w-1/2 font-bold;
    }

    .value {
      @apply w-1/2 text-right;
    }
  }

  .amount-details {
    @apply flex mb-md items-center;
    padding: 5px;

    .label {
      @apply w-1/2 font-bold;
    }

    .value {
      @apply w-1/2 font-bold text-right;
      font-size: 18px;
    }
  }
}

.bill-payment-amount {
  @apply sticky bottom-0 bg-white;
  padding-bottom: 32px;

  .payment-amount-front {
    @apply absolute z-10 w-10 flex justify-center items-center;
    background-color: #efefef;
    padding: 7px 12px;
    color: #9a9a9a;
  }
}

.text-indent-xl input {
  text-indent: 40px;
}

.select-payment-type {
  @apply flex justify-center font-bold items-center;
  padding-top: 10px;
  padding-bottom: 25px;

  .value {
    font-size: 20px;
  }
}

.cheque-date {
  @apply flex items-center mb-lg;
  border: 2px solid #0b0c0c;
  border-radius: 2px;

  input {
    @apply outline-none w-full;
    border: 0px;
    background: transparent;
    text-indent: 5px;
    padding: 6px 0px;
  }

  button {
    @apply outline-none;
    border: 0px;
    background: transparent;
    text-indent: 2px;
  }
}

.w-half {
  @apply w-1/2;
}

.ifsc-field {
  @apply flex items-center mb-lg;
  border: 2px solid #0b0c0c;
  border-radius: 2px;

  input {
    @apply outline-none w-full;
    border: 0px;
    background: transparent;
    text-indent: 5px;
    padding: 6px 0px;
  }
  button {
    @apply outline-none;
    border: 0px;
    background: transparent;
    text-indent: 2px;
  }
}

.text-input {
  @apply relative w-full;
  input{
    &:hover{
      @apply border-2 border-solid border-primary-main;
    }
  }
}

.custom-time-picker {
  @apply w-full;
  max-width: 200px;
}

.sla-cell {
  @apply text-text-secondary;
}

.submit-bar-search {
  margin-top: 32px;
  margin-left: 16px;
  max-width: 256px;
}

.clear-search-container {
  @apply flex justify-between items-center;
}

.card-label-smaller {
  @apply w-1/3;
  margin-bottom: revert;
}

.underline {
  border-color: #e7e6e6;
  @apply mb-sm;
}

.box-shadow-none {
  box-shadow: none;
}

.component-in-front {
  @apply flex justify-center items-center;
}

.subform-composer {
  @apply flex;
}

.inbox-search-container {
  .result {
    @apply mt-lg;
  }
}

.payment-form-text-input-correction {
  width: 100% !important;
}


.edcr-citizen-inbox{ 
   thead th:first-child{
  min-width:155px; 
}

}

